--- a/app/assets/stylesheets/index.css.sass
+++ b/app/assets/stylesheets/index.css.sass
@@ -1,8 +1,12 @@
-@import url("http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700,700italic")
 body
   font-size: 12px
-  font-family: sans-serif, arial, tahoma
-  background: none #f2f2f2 0 -80px
+  font-family: Arial, Tahoma
+  background: #f2f2f2
+.clear
+  width: 100%
+  overflow: hidden
+  clear: both
+  height: 0
 a
   &:link, &:visited
     color: #666
@@ -18,10 +22,8 @@ p.center
   margin: 0
 table td
   vertical-align: middle !important
-h1, h2, h3, h4
-  font-family: 'PT Sans', sans-serif, arial, tahoma
-ul
-  list-style-type: square
+h4
+  font-size: 17px
 h4.title
   border-bottom: 2px solid #ddd
   padding-bottom: 1px
@@ -35,7 +37,10 @@ h4.title
     padding-bottom: 7px
   strong
     color: #91c113
-div.products_list h4.title
+
+.container
+
+.products_list h4.title
   .pull-left
     padding-left: 6px
   .pull-right
@@ -123,7 +128,7 @@ h4.title
 .row.services
   margin-top: 20px
   margin-bottom: 0px
-
+  position: absolute
 .services
   h4
     margin: 0
@@ -144,7 +149,7 @@ h4.title
       min-height: 100px
       padding: 5px
 
-footer
+.footer
   margin-top: -50px
   background-color: #ddd
   position: relative
@@ -155,6 +160,7 @@ footer
     margin: 0
     padding-left: 16px
     color: #666
+    list-style: disc
   a:hover
     color: #000
     text-decoration: underline
@@ -235,7 +241,6 @@ div.products_list
   margin-bottom: 0
   li .product-box
     width: 200px
-    min-height: 260px
     padding: 8px
     position: relative
     &:hover
@@ -251,51 +256,72 @@ div.products_list
       img
         width: 100%
 
-  span.sale
-    height: 54px
-    margin: -1px 0px 0px -1px
-    position: absolute
-    width: 55px
-    overflow: hidden
-    z-index: 100
-    top:  -2px
-    left:  -2px
+span.sale
+  height: 54px
+  margin: -1px 0px 0px -1px
+  position: absolute
+  width: 55px
+  overflow: hidden
+  z-index: 100
+  top:  -2px
+  left:  -2px
+  img
+    width: 100%
+.obj_img
+  position: relative
+  img
+    margin: 0 !important
+  span
+    left: 14px
     img
-      width: 100%
-  p.price
+      float: none
+      margin: 0 !important
+
+p.price
+  font-weight: bold
+  margin-top: 0px
+  color: rgb(51, 51, 51) !important
+  span
+    color: #91c113 !important
+    font-weight: normal
+    font-size: 18px
+    padding-right: 5px
+    padding-left: 5px
+p.obj_info_mini
+  font-size: 16px
+  span:first-child
     font-weight: bold
     margin-top: 0px
-    span
-      color: #91c113
-      font-weight: normal
-      font-size: 18px
-      padding-right: 5px
-      padding-left: 5px
-
+    color: rgb(51, 51, 51) !important
+    width: 90px
+    display: block
+    float: left
+  span:last-child
+    color: #91c113 !important
+    font-weight: normal
+    padding-right: 5px
+    padding-left: 5px
 .block_content
-  border: 1px solid #ddd
-  border-bottom: 3px solid #ddd
+  border: 1px solid #dddddd
+  border-bottom: 3px solid #dddddd
   margin: 20px 0 0 0
+  z-index: 1
+  box-shadow: 0px 0px 2px #bbbbbb
   border-radius: 4px
+  position: relative
   -moz-border-radius: 4px
   -webkit-border-radius: 4px
   overflow: hidden
-  background-color: #fff
-  position: relative
-  z-index: 1
-  box-shadow: 0px 1px 2px #bbb
-  &.detail
-    padding-bottom: 20px
-    min-height: 400px
-  &.last, &.detail
-    border-bottom-color: #BDBDBD
-    box-shadow: 0px 1px 2px #999
+  background-color: #ffffff
 
 .breadcrumb
   margin: -10px 0
   background-color: transparent
   padding: 5px 0
-
+  li
+    a
+      i
+        margin-top: -1px
 #myModal
   width: 515px
 
@@ -409,3 +435,97 @@ ul.social
     img
 
       width: 30px
+.text_block
+  p
+    padding: 0 15px
+    overflow: hidden
+    img
+      float: left
+      margin: 0 25px 10px 10px
+
+
+.shopping_cart
+  display: none
+  position: fixed
+  top: 0
+  left: 0
+  right: 0
+  bottom: 0
+  z-index: 500
+  background: transparent url("/assets/linen.jpg") top left repeat
+  .container
+    position: absolute
+    top: 0
+    left: 50%
+    margin-left: -470px
+    bottom: 0
+    a.btn
+      width: 100% !important
+      margin-bottom: 5px
+      box-sizing: border-box
+      &:hover
+        color: #ffffff !important
+    a.btn-default
+      color: #333333 !important
+    a
+      color: #ffffff !important
+      &:hover
+        color: #91c113 !important
+    .shopping_box
+      position: absolute
+      top: 0
+      left: 0
+      right: 0
+      bottom: 0
+      h4.title
+
+        color:  #ffffff !important
+        span
+          strong
+      .shopping_box_inner
+        position: absolute
+        top: 25px
+        left: 0
+        right: 0
+        bottom: 135px
+        overflow: hidden
+        .row.overview
+          overflow: hidden
+          width: 100%
+          .span3
+            .block_content
+              .products_list.text_block
+                h4.title
+                  span.pull-left
+                    i.icon-book
+                    strong
+                a
+                  p.obj_img
+                    span.sale
+                      img
+                    img
+                  p.obj_info_mini
+                    font-size: 12px
+                    span:first-child
+                      width: 60px
+                    span:last-child
+
+
+      .shopping_box_tottal
+        position: absolute
+        left: 0
+        right: 0
+        bottom: 80px
+        border-top: 2px solid rgb(221, 221, 221)
+        p
+          float: right
+          font-size: 18px
+          color: #ffffff
+          padding-top: 10px
+
+      .shopping_box_footer
+        position: absolute
+        left: 0
+        right: 0
+        bottom: 5px
+        text-align: center
