--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,6 +7,58 @@
     = csrf_meta_tags
   %body
     .container
+      .shopping_cart
+        .container
+          .shopping_box
+            %h4.title
+              %span
+                Корзина
+            .shopping_box_inner
+              .row.overview
+
+                .span3
+                  .block_content
+                    .products_list.text_block
+                      %h4.title
+                        %span.pull-left
+                          %i.icon-book
+                          %strong Название шкафа
+                      %a{:href => "/catalog/detail", :title => ""}
+                        %p.obj_img
+                          %span.sale
+                            %img{:alt => "", :src => "/assets/sale.png"}
+                          %img{:alt => "", :src => "https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcT2SVoUu9_ohsYS4DQh8GuXl2f0AyGoEu7gMSTp1MRumZWzJjkkfQ", :width => "100%"}
+                        %p.obj_info_mini
+                          %span
+                            Цена:
+                          %span
+                            12 000
+                        %p.obj_info_mini
+                          %span
+                            Размеры:
+                          %span
+                            220 x 220 x 220
+                        %p.obj_info_mini
+                          %span
+                            Декор:
+                          %span
+                            Красивая ткань
+                        %p.obj_info_mini
+                          %span
+                            Колл:
+                          %span
+                            +  1  -
+            .shopping_box_tottal
+              %p
+                ИТОГО: 15 500 р
+            .shopping_box_footer
+              %a.btn.btn-success{:href => "javascript:;"}
+                Оформить заказ
+              %a{:href => "javascript:;"}
+                Заказать звонок
+              .clear
+              %a{:href => "javascript:;"}
+                Закрыть
       #top-bar.row
         .span4.logo
           %a{:href => "/"}
@@ -29,6 +81,8 @@
                 %a{:href => "cart.html"}
                   %i.icon-shopping-cart
                   Корзина
+                  %span
+                    (12)
       .row
         .span12
           #main-menu.navbar.navbar-inverse
@@ -37,11 +91,11 @@
                 .nav-collapse
                   %ul.nav
                     %li.active
-                      %a{:href => "index.html"}
+                      %a{:href => "/"}
                         %i.icon-home
 
                     %li.dropdown
-                      %a.dropdown-toggle{:href => "products.html"}
+                      %a.dropdown-toggle{:href => "/catalog/index"}
                         Каталог
                         %b.caret
                       %ul.dropdown-menu
@@ -52,10 +106,10 @@
                         %li
                           %a{:href => "products.html"} Кресла
                     %li.dropdown
-                      %a.dropdown-toggle{:href => "#"}
+                      %a.dropdown-toggle{:href => "/special/index"}
                         Акции и спецпредложения
                     %li.dropdown
-                      %a.dropdown-toggle{:href => "#"}
+                      %a.dropdown-toggle{:href => "/contact/index"}
                         Контакты
                     %li.search_form.pull-right
                       %form.navbar-search{:method => "POST"}
@@ -63,7 +117,7 @@
                         %input.input-medium.search-query{:placeholder => "Поиск...", :type => "text"}
       = yield
 
-    %footer
+    .footer
       .container
         .row
           .span3
@@ -103,7 +157,6 @@
               %h4.title
                 %strong WOODSTOK.ru
               %p
-                %i.icon-home
                 Россия. Москва.
                 %br
                   Красная площадь 1/21
