--- a/app/views/admin/index.html.haml
+++ b/app/views/admin/index.html.haml
@@ -1,2 +1,6 @@
-%h1 Admin#index
-%p Find me in app/views/admin/index.html.haml
+.block_content.container
+  .products_list
+    .row
+      .span12
+        %h1 Admin#index
+        %p Find me in app/views/admin/index.html.haml
