--- a/app/assets/stylesheets/index.css.sass
+++ b/app/assets/stylesheets/index.css.sass
@@ -561,3 +561,5 @@ p.price span.red
     padding-left: 0
     padding-right: 0
     width: 49.9%
+.shopping_cart_link.pull-right
+  float: right !important
