--- a/app/views/catalog/list.html.haml
+++ b/app/views/catalog/list.html.haml
@@ -47,8 +47,8 @@
             %span
               7 вариантов вида
           .btn-group
-            .btn Подробнее
-            .btn.btn-success В корзину
+            %a.btn{:href => '#', :title => ''} Подробнее
+            .btn.btn-success.add_to_shopping_cart В корзину
 
   .span4
     .block_content
@@ -84,8 +84,8 @@
             %span
               7 вариантов вида
           .btn-group
-            .btn Подробнее
-            .btn.btn-success В корзину
+            %a.btn{:href => '#', :title => ''} Подробнее
+            .btn.btn-success.add_to_shopping_cart В корзину
   .span4
     .block_content
       .products_list.text_block
@@ -118,8 +118,8 @@
             %span
               7 вариантов вида
           .btn-group
-            .btn Подробнее
-            .btn.btn-success В корзину
+            %a.btn{:href => '#', :title => ''} Подробнее
+            .btn.btn-success.add_to_shopping_cart В корзину
 .row
   .span4
     .block_content
@@ -148,8 +148,8 @@
             %span
               3 вида обивки
           .btn-group
-            .btn Подробнее
-            .btn.btn-success В корзину
+            %a.btn{:href => '#', :title => ''} Подробнее
+            .btn.btn-success.add_to_shopping_cart В корзину
   .span4
     .block_content
       .products_list.text_block
@@ -177,8 +177,8 @@
             %span
               3 вида обивки
           .btn-group
-            .btn Подробнее
-            .btn.btn-success В корзину
+            %a.btn{:href => '#', :title => ''} Подробнее
+            .btn.btn-success.add_to_shopping_cart В корзину
 
   .span4
     .block_content
@@ -207,8 +207,8 @@
             %span
               3 вида обивки
           .btn-group
-            .btn Подробнее
-            .btn.btn-success В корзину
+            %a.btn{:href => '#', :title => ''} Подробнее
+            .btn.btn-success.add_to_shopping_cart В корзину
 .row
   .span4
     .block_content
@@ -237,8 +237,8 @@
             %span
               3 вида обивки
           .btn-group
-            .btn Подробнее
-            .btn.btn-success В корзину
+            %a.btn{:href => '#', :title => ''} Подробнее
+            .btn.btn-success.add_to_shopping_cart В корзину
   .span4
     .block_content
       .products_list.text_block
@@ -266,8 +266,8 @@
             %span
               3 вида обивки
           .btn-group
-            .btn Подробнее
-            .btn.btn-success В корзину
+            %a.btn{:href => '#', :title => ''} Подробнее
+            .btn.btn-success.add_to_shopping_cart В корзину
 
   .span4
     .block_content
@@ -296,8 +296,8 @@
             %span
               3 вида обивки
           .btn-group
-            .btn Подробнее
-            .btn.btn-success В корзину
+            %a.btn{:href => '#', :title => ''} Подробнее
+            .btn.btn-success.add_to_shopping_cart В корзину
 .row
   .span4
     .block_content
@@ -326,8 +326,8 @@
             %span
               3 вида обивки
           .btn-group
-            .btn Подробнее
-            .btn.btn-success В корзину
+            %a.btn{:href => '#', :title => ''} Подробнее
+            .btn.btn-success.add_to_shopping_cart В корзину
   .span4
     .block_content
       .products_list.text_block
@@ -355,8 +355,8 @@
             %span
               3 вида обивки
           .btn-group
-            .btn Подробнее
-            .btn.btn-success В корзину
+            %a.btn{:href => '#', :title => ''} Подробнее
+            .btn.btn-success.add_to_shopping_cart В корзину
 
   .span4
     .block_content
@@ -385,5 +385,5 @@
             %span
               3 вида обивки
           .btn-group
-            .btn Подробнее
-            .btn.btn-success В корзину
+            %a.btn{:href => '#', :title => ''} Подробнее
+            .btn.btn-success.add_to_shopping_cart В корзину
