--- a/app/views/index/index.html.haml
+++ b/app/views/index/index.html.haml
@@ -174,7 +174,7 @@
                     %p.price
                       Цена:
                       %span.red 12 000
-                    .btn.btn-success В корзину
+                    .btn.btn-success.add_to_shopping_cart В корзину
                 %li.span3.slide_el
                   .product-box
 
@@ -185,7 +185,7 @@
                     %p.price
                       Цена:
                       %span.red 13 000
-                    .btn.btn-success В корзину
+                    .btn.btn-success.add_to_shopping_cart В корзину
                 %li.span3.slide_el
                   .product-box
                     %a.img_box{:href => "product_detail.html"}
@@ -194,7 +194,7 @@
                     %p.price
                       Цена:
                       %span.red 14 000
-                    .btn.btn-success В корзину
+                    .btn.btn-success.add_to_shopping_cart В корзину
                 %li.span3.slide_el
 
                   .product-box
@@ -206,7 +206,7 @@
                     %p.price
                       Цена:
                       %span.red 14 000
-                    .btn.btn-success В корзину
+                    .btn.btn-success.add_to_shopping_cart В корзину
                 %li.span3.slide_el
                   .product-box
 
@@ -217,7 +217,7 @@
                     %p.price
                       Цена:
                       %span.red 12 000
-                    .btn.btn-success В корзину
+                    .btn.btn-success.add_to_shopping_cart В корзину
                 %li.span3.slide_el
                   .product-box
 
@@ -228,7 +228,7 @@
                     %p.price
                       Цена:
                       %span.red 13 000
-                    .btn.btn-success В корзину
+                    .btn.btn-success.add_to_shopping_cart В корзину
                 %li.span3.slide_el
                   .product-box
                     %a.img_box{:href => "product_detail.html"}
@@ -237,7 +237,7 @@
                     %p.price
                       Цена:
                       %span.red 14 000
-                    .btn.btn-success В корзину
+                    .btn.btn-success.add_to_shopping_cart В корзину
                 %li.span3.slide_el
 
                   .product-box
@@ -249,7 +249,7 @@
                     %p.price
                       Цена:
                       %span.red 14 000
-                    .btn.btn-success В корзину
+                    .btn.btn-success.add_to_shopping_cart В корзину
 .block_content.container.slider_init
   .products_list
     .row
@@ -277,7 +277,7 @@
                     %p.price
                       Цена:
                       %span 12 000
-                    .btn.btn-success.btn-mini В корзину
+                    .btn.btn-success.btn-mini.add_to_shopping_cart В корзину
                 %li.span3.slide_el
                   .product-box
                     %span.sale
@@ -288,7 +288,7 @@
                     %p.price
                       Цена:
                       %span 13 000
-                    .btn.btn-success.btn-mini В корзину
+                    .btn.btn-success.btn-mini.add_to_shopping_cart В корзину
                 %li.span3.slide_el
                   .product-box
                     %a.img_box{:href => "product_detail.html"}
@@ -297,7 +297,7 @@
                     %p.price
                       Цена:
                       %span 14 000
-                    .btn.btn-success.btn-mini В корзину
+                    .btn.btn-success.btn-mini.add_to_shopping_cart В корзину
                 %li.span3.slide_el
                   .product-box
                     %a.img_box{:href => "product_detail.html"}
@@ -307,4 +307,4 @@
                     %p.price
                       Цена:
                       %span 14 000
-                    .btn.btn-success.btn-mini В корзину
+                    .btn.btn-success.btn-mini.add_to_shopping_cart В корзину
