--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,7 +13,7 @@
             %h4.title
               %span
                 Корзина
-            .shopping_box_inner
+            .shopping_box_inner.viewport
               .row.overview
 
                 .span3
@@ -23,7 +23,7 @@
                         %span.pull-left
                           %i.icon-book
                           %strong Название шкафа
-                      %a{:href => "/catalog/detail", :title => ""}
+                      %div
                         %p.obj_img
                           %span.sale
                             %img{:alt => "", :src => "/assets/sale.png"}
@@ -31,7 +31,7 @@
                         %p.obj_info_mini
                           %span
                             Цена:
-                          %span
+                          %span.cena
                             12 000
                         %p.obj_info_mini
                           %span
@@ -43,11 +43,153 @@
                             Декор:
                           %span
                             Красивая ткань
-                        %p.obj_info_mini
+                        %p.obj_info_mini.coll_change
                           %span
                             Колл:
                           %span
-                            +  1  -
+                            %i.icon-minus
+                            %span.coll 1
+                            %i.icon-plus
+                .span3
+                  .block_content
+                    .products_list.text_block
+                      %h4.title
+                        %span.pull-left
+                          %i.icon-book
+                          %strong Название шкафа
+                      %div
+                        %p.obj_img
+                          %span.sale
+                            %img{:alt => "", :src => "/assets/sale.png"}
+                          %img{:alt => "", :src => "https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcT2SVoUu9_ohsYS4DQh8GuXl2f0AyGoEu7gMSTp1MRumZWzJjkkfQ", :width => "100%"}
+                        %p.obj_info_mini
+                          %span
+                            Цена:
+                          %span.cena
+                            12 000
+                        %p.obj_info_mini
+                          %span
+                            Размеры:
+                          %span
+                            220 x 220 x 220
+                        %p.obj_info_mini
+                          %span
+                            Декор:
+                          %span
+                            Красивая ткань
+                        %p.obj_info_mini.coll_change
+                          %span
+                            Колл:
+                          %span
+                            %i.icon-minus
+                            %span.coll 1
+                            %i.icon-plus
+                .span3
+                  .block_content
+                    .products_list.text_block
+                      %h4.title
+                        %span.pull-left
+                          %i.icon-book
+                          %strong Название шкафа
+                      %div
+                        %p.obj_img
+                          %span.sale
+                            %img{:alt => "", :src => "/assets/sale.png"}
+                          %img{:alt => "", :src => "https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcT2SVoUu9_ohsYS4DQh8GuXl2f0AyGoEu7gMSTp1MRumZWzJjkkfQ", :width => "100%"}
+                        %p.obj_info_mini
+                          %span
+                            Цена:
+                          %span.cena
+                            12 000
+                        %p.obj_info_mini
+                          %span
+                            Размеры:
+                          %span
+                            220 x 220 x 220
+                        %p.obj_info_mini
+                          %span
+                            Декор:
+                          %span
+                            Красивая ткань
+                        %p.obj_info_mini.coll_change
+                          %span
+                            Колл:
+                          %span
+                            %i.icon-minus
+                            %span.coll 1
+                            %i.icon-plus
+                .span3
+                  .block_content
+                    .products_list.text_block
+                      %h4.title
+                        %span.pull-left
+                          %i.icon-book
+                          %strong Название шкафа
+                      %div
+                        %p.obj_img
+                          %span.sale
+                            %img{:alt => "", :src => "/assets/sale.png"}
+                          %img{:alt => "", :src => "https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcT2SVoUu9_ohsYS4DQh8GuXl2f0AyGoEu7gMSTp1MRumZWzJjkkfQ", :width => "100%"}
+                        %p.obj_info_mini
+                          %span
+                            Цена:
+                          %span.cena
+                            12 000
+                        %p.obj_info_mini
+                          %span
+                            Размеры:
+                          %span
+                            220 x 220 x 220
+                        %p.obj_info_mini
+                          %span
+                            Декор:
+                          %span
+                            Красивая ткань
+                        %p.obj_info_mini.coll_change
+                          %span
+                            Колл:
+                          %span
+                            %i.icon-minus
+                            %span.coll 1
+                            %i.icon-plus
+                .span3
+                  .block_content
+                    .products_list.text_block
+                      %h4.title
+                        %span.pull-left
+                          %i.icon-book
+                          %strong Название шкафа
+                      %div
+                        %p.obj_img
+                          %span.sale
+                            %img{:alt => "", :src => "/assets/sale.png"}
+                          %img{:alt => "", :src => "https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcT2SVoUu9_ohsYS4DQh8GuXl2f0AyGoEu7gMSTp1MRumZWzJjkkfQ", :width => "100%"}
+                        %p.obj_info_mini
+                          %span
+                            Цена:
+                          %span.cena
+                            12 000
+                        %p.obj_info_mini
+                          %span
+                            Размеры:
+                          %span
+                            220 x 220 x 220
+                        %p.obj_info_mini
+                          %span
+                            Декор:
+                          %span
+                            Красивая ткань
+                        %p.obj_info_mini.coll_change
+                          %span
+                            Колл:
+                          %span
+                            %i.icon-minus
+                            %span.coll 1
+                            %i.icon-plus
+            .scrollbar
+              .track
+                .thumb
+                  .end
             .shopping_box_tottal
               %p
                 ИТОГО: 15 500 р
@@ -57,7 +199,7 @@
               %a{:href => "javascript:;"}
                 Заказать звонок
               .clear
-              %a{:href => "javascript:;"}
+              %a.shop_cart_close{:href => "javascript:;"}
                 Закрыть
       #top-bar.row
         .span4.logo
@@ -78,7 +220,7 @@
               |
             %li
               .basket
-                %a{:href => "cart.html"}
+                %a.scl{:href => "javascript:;"}
                   %i.icon-shopping-cart
                   Корзина
                   %span
@@ -119,7 +261,7 @@
                         Контакты
 
                     %li.shopping_cart_link.pull-right.hide
-                      %a{:href => "cart.html"}
+                      %a.scl{:href => "javascript:;"}
                         %i.icon-shopping-cart.icon-white
                         Корзина
                         %span
