--- a/app/assets/stylesheets/index.css.sass
+++ b/app/assets/stylesheets/index.css.sass
@@ -505,21 +505,24 @@ ul.social
         left: 0
         right: 0
         bottom: 135px
-        overflow: hidden
+        overflow-y: hidden
         .row.overview
           overflow: hidden
-          width: 100%
+          width: 5000px
           .span3
             .block_content
               .products_list.text_block
-
-                a
-
-                  p.obj_info_mini
-                    font-size: 12px
-                    span:first-child
-                      width: 60px
-
+                p.obj_info_mini
+                  font-size: 12px
+                  span:first-child
+                    width: 60px
+                .coll_change
+                  span
+                    i
+                      cursor: pointer
+                      margin-top: -2px
+                    .coll
+                      font-size: 16px
 
       .shopping_box_tottal
         position: absolute
@@ -553,13 +556,50 @@ p.price span.red
     font-size: 10px
     line-height: 12px
 
-.btn-group
-  width: 100%
-  padding: 0 15px 15px 15px
-  display: table
-  .btn
-    padding-left: 0
-    padding-right: 0
-    width: 49.9%
+.products_list.text_block
+  .btn-group
+    width: 100%
+    padding: 0 15px 15px 15px
+    display: table
+    .btn
+      padding-left: 0
+      padding-right: 0
+      width: 49.9%
 .shopping_cart_link.pull-right
   float: right !important
+
+
+#scrollbar2
+  .scrollbar
+    background: rgba(0, 0, 0, 0.5)
+    position: relative
+    margin: 0 0 5px
+    clear: both
+    height: 15px
+  .track
+    background: transparent url(../images/bg-scrollbar-trackend-x.png) no-repeat 100% 0
+    width: 100%
+    height: 15px
+    position: relative
+  .thumb
+    background: rgba(255, 255, 255, 0.5)
+    height: 25px
+    cursor: pointer
+    overflow: hidden
+    position: absolute
+    left: 0
+    top: -5px
+    .end
+      background: transparent url(../images/bg-scrollbar-thumb-x.png) no-repeat 0 50%
+      overflow: hidden
+      height: 25px
+      width: 5px
+  .disable
+    display: none
+
+.noSelect
+  user-select: none
+  -o-user-select: none
+  -moz-user-select: none
+  -khtml-user-select: none
+  -webkit-user-select: none
